	* Changed the modelling protocol to allow createModel and testModel requests to specify what statistics should be calculated.
	* Removed model statistics parameters from om_model since they can be specified as part of the XML request.
	* All command line programs now return the same openModeller version number.
	* New algorithm Niche Mosaic.
	* Implemented custom log file in the modelling server.

Release 0.7 (2009-01-14)
------------------------
SVN revision: 4761

	* New Algorithm using Artificial Neural Networks.
	* Changed AUC calculation when no absence points are provided (instead of using 1-specificity after generating pseudo-absences, it now uses the proportion of points predicted present for a large number of random background points).
	* Included method to calculate partial area ratio in ROC class.
	* Added parameters --calc-matrix, --calc-roc, --num-background and --max-omission to om_test.
	* Changed confusion matrix serialization to store all raw values.
	* Included new map format to generate ARC/Info ASCII grid files (byte or floating point fomats).
	* Fixed bug in Maximum Entropy algorithm (environment was being re-normalized when pseudo-absences were generated internally).
	* Added support to handle categorical values in the Maximum Entropy algorithm.
	* Fixed bug in ROC curve calculation: when the corresponding algorithm required normalization and the sampler passed as a parameter was unnormalized, algorithm prediction values were being calculated based on unnormalized samples.
	* Added support to use "Spatially unique" and Environmentally unique" keywords in the request file (console interface).

Release 0.6.1 (2008-10-13)
--------------------------
SVN revision: 4580

	* Enabled integration with Condor in the modelling server.
	* Added new method in the modelling service to perform external tests.
	* Renamed om_testmodel to om_test. The new version is using getopts and accepts XML requests. A man page was also created.